<resources>
    <string name="app_name">Calculadora</string>

    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btn0">0</string>

    <string name="btnporcentaje">%</string>
    <string name="btnraiz">√</string>
    <string name="btnx2">x2</string>
    <string name="btn1x">1/x</string>

    <string name="opmas">+</string>
    <string name="opmenos">-</string>
    <string name="opentre">÷</string>
    <string name="oppor">x</string>
    <string name="oppigual">=</string>

    <string name="masmenos">±</string>
    <string name="punto">.</string>

    <string name="CE">CE</string>
    <string name="C">C</string>
    <string name="BORRAR">B</string>

</resources>
