<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/bx2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="29dp"
        android:onClick="potencia"
        android:text="@string/btnx2"
        app:layout_constraintStart_toEndOf="@+id/braiz"
        app:layout_constraintTop_toBottomOf="@+id/cajitafeliz" />

    <EditText
        android:id="@+id/cajitafeliz"
        android:layout_width="345dp"
        android:layout_height="72dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bporcentaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="29dp"
        android:onClick="porcentaje"
        android:text="@string/btnporcentaje"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cajitafeliz" />

    <Button
        android:id="@+id/braiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="29dp"
        android:onClick="raiz"
        android:text="@string/btnraiz"
        app:layout_constraintStart_toEndOf="@+id/bporcentaje"
        app:layout_constraintTop_toBottomOf="@+id/cajitafeliz" />

    <Button
        android:id="@+id/b1x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="30dp"
        android:text="@string/btn1x"
        app:layout_constraintStart_toEndOf="@+id/bx2"
        app:layout_constraintTop_toBottomOf="@+id/cajitafeliz" />

    <Button
        android:id="@+id/bce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="15dp"
        android:onClick="clear"
        android:text="@string/CE"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bporcentaje" />

    <Button
        android:id="@+id/bc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="15dp"
        android:onClick="borrar"
        android:text="@string/C"
        app:layout_constraintStart_toEndOf="@+id/bce"
        app:layout_constraintTop_toBottomOf="@+id/braiz" />

    <Button
        android:id="@+id/bb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="15dp"
        android:onClick="clear"
        android:text="@string/BORRAR"
        app:layout_constraintStart_toEndOf="@+id/bc"
        app:layout_constraintTop_toBottomOf="@+id/bx2" />

    <Button
        android:id="@+id/bentre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="15dp"
        android:onClick="division"
        android:text="@string/opentre"
        app:layout_constraintStart_toEndOf="@+id/bb"
        app:layout_constraintTop_toBottomOf="@+id/b1x" />

    <Button
        android:id="@+id/b7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="15dp"
        android:onClick="b7"
        android:text="@string/btn7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bce" />

    <Button
        android:id="@+id/b8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="15dp"
        android:onClick="b8"
        android:text="@string/btn8"
        app:layout_constraintStart_toEndOf="@+id/b7"
        app:layout_constraintTop_toBottomOf="@+id/bc" />

    <Button
        android:id="@+id/b9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="11dp"
        android:onClick="b9"
        android:text="@string/btn9"
        app:layout_constraintStart_toEndOf="@+id/b8"
        app:layout_constraintTop_toBottomOf="@+id/bc" />

    <Button
        android:id="@+id/bpor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:onClick="multiplicacion"
        android:text="@string/oppor"
        app:layout_constraintStart_toEndOf="@+id/b9"
        app:layout_constraintTop_toBottomOf="@+id/bentre" />

    <Button
        android:id="@+id/b4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="15dp"
        android:onClick="b4"
        android:text="@string/btn4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b7" />

    <Button
        android:id="@+id/b1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="15dp"
        android:onClick="b1"
        android:text="@string/btn1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b4" />

    <Button
        android:id="@+id/b5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="15dp"
        android:onClick="b5"
        android:text="@string/btn5"
        app:layout_constraintStart_toEndOf="@+id/b4"
        app:layout_constraintTop_toBottomOf="@+id/b8" />

    <Button
        android:id="@+id/b2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="15dp"
        android:onClick="b2"
        android:text="@string/btn2"
        app:layout_constraintStart_toEndOf="@+id/b1"
        app:layout_constraintTop_toBottomOf="@+id/b5" />

    <Button
        android:id="@+id/b6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="15dp"
        android:onClick="b6"
        android:text="@string/btn6"
        app:layout_constraintStart_toEndOf="@+id/b5"
        app:layout_constraintTop_toBottomOf="@+id/b8" />

    <Button
        android:id="@+id/b3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="15dp"
        android:onClick="b3"
        android:text="@string/btn3"
        app:layout_constraintStart_toEndOf="@+id/b2"
        app:layout_constraintTop_toBottomOf="@+id/b6" />

    <Button
        android:id="@+id/b0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="15dp"
        android:onClick="b0"
        android:text="@string/btn0"
        app:layout_constraintStart_toEndOf="@+id/bmasmenos"
        app:layout_constraintTop_toBottomOf="@+id/b3" />

    <Button
        android:id="@+id/bmenos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="19dp"
        android:onClick="resta"
        android:text="@string/opmenos"
        app:layout_constraintStart_toEndOf="@+id/b6"
        app:layout_constraintTop_toBottomOf="@+id/b9" />

    <Button
        android:id="@+id/bpunto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="15dp"
        android:onClick="bpunto"
        android:text="@string/punto"
        app:layout_constraintStart_toEndOf="@+id/b0"
        app:layout_constraintTop_toBottomOf="@+id/b3" />

    <Button
        android:id="@+id/bmasmenos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="15dp"
        android:text="@string/masmenos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b1" />

    <Button
        android:id="@+id/bmas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="15dp"
        android:onClick="suma"
        android:text="@string/opmas"
        app:layout_constraintStart_toEndOf="@+id/b3"
        app:layout_constraintTop_toBottomOf="@+id/bmenos" />

    <Button
        android:id="@+id/bigual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="15dp"
        android:onClick="igual"
        android:text="@string/oppigual"
        app:layout_constraintStart_toEndOf="@+id/bpunto"
        app:layout_constraintTop_toBottomOf="@+id/bmas" />

</androidx.constraintlayout.widget.ConstraintLayout>